Fix Google Analytics placement and add to all pages
- Moved GA tag to be first element after <head> tag
- Added GA tracking to merch.html page
- Added Google site verification file
- Ensures proper tracking across all pages

--- a/merch.html
+++ b/merch.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Google Analytics - DEBE IR PRIMERO -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TQ2RP0YJK5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-TQ2RP0YJK5');
+    </script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DDSolutions Merchandising - Colección Oficial</title>
