Fix domain configuration for GitHub Pages
- Changed CNAME from www.ddsolutions.ai to ddsolutions.ai
- Added canonical URL to prevent duplicate content
- Added JavaScript redirect from www to non-www
- Added _config.yml for GitHub Pages configuration

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DDSolutions - Soluciones Informáticas con IA</title>
+    
+    <!-- Canonical URL para evitar duplicados -->
+    <link rel="canonical" href="https://ddsolutions.ai/">
+    
+    <!-- Redirección de www a non-www con JavaScript -->
+    <script>
+        if (window.location.hostname === 'www.ddsolutions.ai') {
+            window.location.replace('https://ddsolutions.ai' + window.location.pathname);
+        }
+    </script>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
